# Langchain-LLM-Config

./: README.md  api.yaml  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
examples/: basic_usage.py  dynamic_parser_example.py  embeddings_example.py  multimodal_example.py  raw_text_mode_example.py  streaming_example.py  structured_output_example.py
langchain_llm_config/: __init__.py  cli.py  config.py  example.py  factory.py
langchain_llm_config/assistant/: base.py  chat_streaming.py
langchain_llm_config/assistant/providers/: gemini.py  vllm.py
langchain_llm_config/embeddings/: base.py
langchain_llm_config/embeddings/providers/: __init__.py  gemini.py  infinity.py  kunlun.py  openai.py  vllm.py
langchain_llm_config/templates/: api.yaml
tests/: conftest.py  test_assistant.py  test_auto_apply_parser.py  test_basic.py  test_cli.py  test_config.py  test_example.py  test_factory.py  test_providers.py  test_tiktoken_cache.py
